@@ -7,6 +7,13 @@
   * Added #list_item_elements to ElementLocators
   * Added #unordered_list_elements to ElementLocators
   * Added #ordered_list_elements to ElementLocators
+  * Added #h1_elements to ElementLocators
+  * Added #h2_elements to ElementLocators
+  * Added #h3_elements to ElementLocators
+  * Added #h4_elements to ElementLocators
+  * Added #h5_elements to ElementLocators
+  * Added #h6_elements to ElementLocators
+
 === 2016-12-12
 * Enhancements
   * Added #hidden_field_elements to ElementLocators
